# mai-db-cp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: database.py  main.py  schemas.py
backend/app/routers/: auth.py
db/schema/: 001_create_users_table.sql  002_create_friends_table.sql  003_create_user_health_table.sql  004_create_user_points_table.sql  005_create_activity_types_table.sql  006_create_user_activities_table.sql  007_create_achievents_table.sql  008_create_user_achievements_table.sql
frontend/: Dockerfile
frontend/public/: index.html  script.js  styles.css
